Added return to homepage link in recipe.
Return link from Grape Jelly Meatballs recipe to homepage.

--- a/recipes/grape-jelly-meatballs.html
+++ b/recipes/grape-jelly-meatballs.html
@@ -5,6 +5,7 @@
     <title>Recipe | Grape Jelly Meatballs</title>   
 </head>
 <body>
+<a href="../index.html">Back to Homepage</a>
 <h1>Recipe: Grape Jelly Meatballs</h1>
 
 </body>
