Recipe data entered for Grape Jelly Meatballs.
HTML file completed.

--- a/recipes/grape-jelly-meatballs.html
+++ b/recipes/grape-jelly-meatballs.html
@@ -7,6 +7,28 @@
 <body>
 <a href="../index.html">Back to Homepage</a>
 <h1>Recipe: Grape Jelly Meatballs</h1>
+<img src="../media/grapejellymeatballs.webp" alt="Image of Grape Jelly Meatballs - Credit: My Hot Southern Mess" width="500" height="300">
+<p>Image credit: <em>My Hot Southern Mess</em></p>
+<br>
+<p>Both savory and easy, Grape Jelly Meatballs are a no brainer for an appetizer at your next gathering.</p>
+
+<h2>Ingredients:</h2>
+<ul>
+<li><b>Jelly</b>: 1 (32 ounce) jar of your choice of grape jelly.</li>
+<li><b>Chili sauce</b>: 2 (12 ounce) bottles of a chili sauce that uses a tomato base, like Heinz.</li>
+<li><b>1 pinch of cayenne pepper</b>: (<i>Optional</i>).</li>
+<li><b>1 (6 pound) bag of frozen meatballs</b>: Nothing too large, keep them bite sized.</li>
+</ul>
+
+<h2>Instructions:</h2>
+<p>This one's simple, just three steps and you're off to the races:</p>
+<ol>
+<li>Cook the first three ingredients until nice and warm.</li>
+<li>Place the meatballs in a slow cooker and cover with the jelly mixture.</li>
+<li>Cook on low in the slow cooker for 3-4 hours.</li>
+</ol>
+
+<p>And that's it! Serve them up with toothpicks and enjoy the sweet and savory goodness.</p>
 
 </body>
 </html>
