Updated index.html - recipes placed in list format

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <h1>Odin Recipes</h1>
-
-<a href="recipes/grape-jelly-meatballs.html">Recipe: Grape Jelly Meatballs</a>
+<ul>
+<li><a href="recipes/grape-jelly-meatballs.html">Recipe: Grape Jelly Meatballs</a></li>
+<li><a href="recipes/maple-roasted-brussel-sprouts.html">Recipe: Maple Roasted Brussel Sprouts</a></li>
+</ul>
 </body>
 </html>
